next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk, 6.1-dev, future 6.2): 
-------------------------------------------------

- WFS Quote Escape issue (#4087)

- Raster layer fails to be drawn if the window is less than half a pixel (#4172)

- shptree: Improvement to reduce size of .qix files (#4169)

- avoid potential gd fontcache deadlock on fastcgi exit signals(#4093)

- Adjusted WCS GetCapabilities for an empty list of layers (#4140)

- Adjusted WMS GetCapabilities for an empty list of layers (#3755)

- Refactor cgi masperv to not call exit on argument errors (#3099)

- Add --with-apache-module configure option to build an apache dso module
  (#2565)

- Use libtool to build object files and libraries

- Dynamically link libmapserver to the created binaries by default
  (requires the make install step to be run)

- Python mapscript builds with make instead of setuptools

- Fix LABELPNT geomtransform position for non-cached labels (#4121)

- Add RFC80 font fallback support (#4114)

- Added POLAROFFSET style option for a different symbol transform (#4117)

- automatically translate vector symbol points (#4116)

- Add RFC79 Layer masking (#4111)

- Fixed single pixel coverages in WCS 2.0 (#4110)

- Add svg symbols support (#3671)

- Fixed subsetting in WCS 2.0 (#4099)

- Upgrade clipper library to 4.6.3

- Make openlayers wms template request images with mimetype of outputformat
  defined in the mapfile's imagetype

- Fix memory leak in msSLDParseRasterSymbolizer()

- Fix compilation error with clang in renderers/agg/include/agg_renderer_outline_aa.h

- Add stable hatch rendering (#3847)

- Added vector field rendering (#4094)

- Add wms dimensions support (#3466)

- Fixed segfault when calling classObj::updateFromString() with SYMBOL (#4062)
