@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk, 6.1-dev, future 6.2): 
 -------------------------------------------------
 
+- Fixed lexer buffer size issue with single quotes in a string  (#4175)
+
 - WFS Quote Escape issue (#4087)
 
 - Raster layer fails to be drawn if the window is less than half a pixel (#4172)
